--- a/Mobile/app.json
+++ b/Mobile/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "Mobile",
     "slug": "Mobile",
+    "owner": "shulav",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -37,6 +38,18 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "151e4506-a023-43e9-8dba-8642ef861479"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/151e4506-a023-43e9-8dba-8642ef861479"
     }
   }
 }
