--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -45,7 +45,8 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "react-toastify": "^11.0.5",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "expo-updates": "~0.28.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
